--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,89 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~normalize.css";
+@import "./app/assets/themes/themes.scss";
+
+// * {
+// }
+
+html {
+  scroll-behavior: smooth;
+}
+
+// body {
+// }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "PoiretOne", sans-serif;
+  color: $d-primary-color;
+}
+
+h1::selection,
+h2::selection,
+h3::selection,
+h4::selection,
+h5::selection,
+h6::selection {
+  background: $grey-06;
+}
+
+h1 {
+  font-size: 2.5rem;
+  margin: 1.5rem 0rem;
+}
+
+h2 {
+  font-size: 2rem;
+  margin: 1.5rem 0rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+  margin: 1.5rem 0rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+  margin: 1rem 0rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+  margin: 1rem 0rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
+p {
+  font-family: "OpenSans", sans-serif;
+}
+
+p::selection {
+  color: $white;
+  background: $grey-06;
+}
+
+button {
+  color: $white;
+  font-family: "PoiretOne", sans-serif;
+}
+
+button::selection {
+  background: $grey-06;
+}
+
+a {
+  font-size: 1.25rem;
+  text-decoration: none;
+  font-family: "PoiretOne", sans-serif;
+}
+
+a::selection {
+  color: $white;
+  background: $grey-06;
+}
