Añadida imagen provisional

--- a/src/app/assets/themes/dark-theme.scss
+++ b/src/app/assets/themes/dark-theme.scss
@@ -4,6 +4,6 @@ $d-primary-color: #2f9d81;
 $d-primary-light-color: #00b686;
 $d-primary-dark-color: #085b48;
 
-$d-secondary-color: #836960;
+$d-secondary-color: #a78173;
 $d-secondary-light-color: #d3b8ae;
 $d-secondary-dark-color: #725b53;
