--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -4,8 +4,6 @@
       ><h1>José Manuel Rodríguez Camacho</h1>
       <h2>Full-Stack Web Developer</h2></span
     >
+    <img src="assets/escritorio.webp" alt="wa4q43trehe" />
   </div>
-  <span>
-    <img src="" alt="wtrehe" />
-  </span>
 </section>
