Update Angular depencies and buil configs v16 -> v17

--- a/src/app/home/components/footer/footer.component.html
+++ b/src/app/home/components/footer/footer.component.html
@@ -12,7 +12,7 @@
           </a>
           <a href="mailto:josemanuel0709@hotmail.es">
             <i class="fa-solid fa-envelope"></i>
-            josemanuel0709@hotmail.es
+            josemanuel0709&#64;hotmail.es
           </a>
         </div>
       </div>
