--- a/src/app/assets/themes/dark-theme.scss
+++ b/src/app/assets/themes/dark-theme.scss
@@ -1,9 +1,9 @@
 // Colores
 //$d-primary-color: #1de9b6;
-$d-primary-color: #2f9d81;
-$d-primary-light-color: #00b686;
+$d-primary-color: #2d9077;
+$d-primary-light-color: #cfeacb;
 $d-primary-dark-color: #085b48;
 
-$d-secondary-color: #a78173;
-$d-secondary-light-color: #d3b8ae;
+$d-secondary-color: #7b584b;
+$d-secondary-light-color: #faebd7;
 $d-secondary-dark-color: #725b53;
