--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -1,9 +1,20 @@
 <section id="home">
   <div class="header-container">
-    <span
-      ><h1>José Manuel Rodríguez Camacho</h1>
-      <h2>Full-Stack Web Developer</h2></span
-    >
-    <img src="assets/escritorio.webp" alt="wa4q43trehe" />
+    <span>
+      <h1>José Manuel Rodríguez Camacho</h1>
+      <h2>Full-Stack Web Developer</h2>
+      <div class="links">
+        <a href="https://www.linkedin.com/in/jose-manuel-r-c/" target="_blank">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+        <a href="https://github.com/josemanuelrc" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+      </div>
+    </span>
+    <img
+      src="assets/images/landing_picture.jpeg"
+      alt="Imagen principal de la cabecera con varias plantas, un monitor y varios útiles de oficina"
+    />
   </div>
 </section>
