--- a/src/app/home/components/sections/curriculum/curriculum.component.html
+++ b/src/app/home/components/sections/curriculum/curriculum.component.html
@@ -11,6 +11,7 @@
     <button class="btn-download" (click)="downloadFile()">Descargar CV</button>
     <a
       #link
+      id="link"
       href="assets/documents/curriculum.pdf"
       download="curriculum.pdf"
       name="Descargar Currículum"
