--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -1,8 +1,10 @@
 <section id="home">
   <div class="header-container">
-    <span>
+    <span class="header-title">
       <h1>José Manuel Rodríguez Camacho</h1>
       <h2>Full-Stack Web Developer</h2>
+
+      <p>¡Bienvenido a mi página web!</p>
       <div class="links">
         <a href="https://www.linkedin.com/in/jose-manuel-r-c/" target="_blank">
           <i class="fa-brands fa-linkedin-in"></i>
@@ -12,9 +14,5 @@
         </a>
       </div>
     </span>
-    <img
-      src="assets/images/landing_picture.jpeg"
-      alt="Imagen principal de la cabecera con varias plantas, un monitor y varios útiles de oficina"
-    />
   </div>
 </section>
