--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,14 @@ html {
 //}
 
 h1,
-h2,
+h2 {
+  font-family: "PoiretOne", sans-serif;
+  color: $white;
+  &::selection {
+    background: $grey-06;
+  }
+}
+
 h3,
 h4,
 h5,
