--- a/src/app/assets/themes/themes.scss
+++ b/src/app/assets/themes/themes.scss
@@ -1,3 +1,27 @@
-@import './dark-theme.scss';
-@import './light-theme.scss';
-@import './shared-theme.scss';
+// Colores
+
+$d-primary-color: #35b895;
+$d-primary-light-color: #cfeacb;
+$d-primary-dark-color: #222e2b;
+
+$d-secondary-color: #7b584b;
+$d-secondary-light-color: #faebd7;
+$d-secondary-dark-color: #725b53;
+
+// Gama de Grises
+$white: #ffffff;
+$grey-01: #eeeeee;
+$grey-02: #dddddd;
+$grey-03: #cccccc;
+$grey-04: #bbbbbb;
+$grey-05: #aaaaaa;
+$grey-06: #999999;
+$grey-07: #888888;
+$grey-08: #777777;
+$grey-09: #666666;
+$grey-10: #555555;
+$grey-11: #444444;
+$grey-12: #333333;
+$grey-13: #222222;
+$grey-14: #111111;
+$black: #000000;
