--- a/src/app/home/components/header/header.component.scss
+++ b/src/app/home/components/header/header.component.scss
@@ -2,6 +2,8 @@
 
 header {
   position: sticky;
+  z-index: 10;
   top: 0rem;
-  background-color: $d-secondary-color;
+  background-color: $black;
+  opacity: 0.9;
 }
