--- a/src/app/home/components/header/nav/nav.component.html
+++ b/src/app/home/components/header/nav/nav.component.html
@@ -8,43 +8,43 @@
   <ul class="nav-bar-list">
     <li class="nav-bar-li">
       <a href="#">
-        <i class="fa-solid fa-house"></i>
+        <i class="fa-sharp fa-solid fa-house"></i>
         Inicio
       </a>
     </li>
     <li class="nav-bar-li">
       <a href="#about-me">
-        <i class="fa-solid fa-circle-info"></i>
+        <i class="fa-sharp fa-solid fa-circle-info"></i>
         Sobre mí
       </a>
     </li>
     <li class="nav-bar-li">
       <a href="#experience">
-        <i class="fa-solid fa-briefcase"></i>
+        <i class="fa-sharp fa-solid fa-briefcase"></i>
         Experiencia
       </a>
     </li>
     <li class="nav-bar-li">
       <a href="#technologies">
-        <i class="fa-solid fa-code"></i>
+        <i class="fa-sharp fa-solid fa-code"></i>
         Tecnologías
       </a>
     </li>
     <li class="nav-bar-li">
       <a href="#education">
-        <i class="fa-solid fa-book"></i>
+        <i class="fa-sharp fa-solid fa-book"></i>
         Formación
       </a>
     </li>
     <li class="nav-bar-li">
       <a href="#curriculum">
-        <i class="fa-solid fa-clipboard"></i>
+        <i class="fa-sharp fa-solid fa-clipboard"></i>
         Currículum Vitae
       </a>
     </li>
     <li class="nav-bar-li">
       <a href="#contact">
-        <i class="fa-solid fa-message"></i>
+        <i class="fa-sharp fa-solid fa-message"></i>
         Contacto
       </a>
     </li>
@@ -56,10 +56,11 @@
     <button class="menu-btn" (click)="toggleMenu()">
       <i
         [ngClass]="
-          isMenuOpen ? 'fa-solid fa-x fa-2x' : 'fa-sharp fa-solid fa-bars fa-2x'
+          isMenuOpen
+            ? 'fa-sharp fa-solid fa-x fa-2x'
+            : 'fa-sharp fa-solid fa-bars fa-2x'
         "
-      ></i
-      ><i class="fa-sharp fa-solid fa-bars"></i>
+      ></i>
     </button>
   </div>
 </nav>
@@ -68,43 +69,43 @@
   <ul>
     <li>
       <a href="#">
-        <i class="fa-solid fa-house"></i>
+        <i class="fa-sharp fa-solid fa-house"></i>
         Inicio
       </a>
     </li>
     <li>
       <a href="#about-me" (click)="toggleMenu()">
-        <i class="fa-solid fa-circle-info"></i>
+        <i class="fa-sharp fa-solid fa-circle-info"></i>
         Sobre mí
       </a>
     </li>
     <li>
       <a href="#experience" (click)="toggleMenu()">
-        <i class="fa-solid fa-briefcase"></i>
+        <i class="fa-sharp fa-solid fa-briefcase"></i>
         Experiencia
       </a>
     </li>
     <li>
       <a href="#technologies" (click)="toggleMenu()">
-        <i class="fa-solid fa-code"></i>
+        <i class="fa-sharp fa-solid fa-code"></i>
         Tecnologías
       </a>
     </li>
     <li>
       <a href="#education" (click)="toggleMenu()">
-        <i class="fa-solid fa-book"></i>
+        <i class="fa-sharp fa-solid fa-book"></i>
         Formación
       </a>
     </li>
     <li>
       <a href="#curriculum" (click)="toggleMenu()">
-        <i class="fa-solid fa-clipboard"></i>
+        <i class="fa-sharp fa-solid fa-clipboard"></i>
         Currículum Vitae
       </a>
     </li>
     <li>
       <a href="#contact" (click)="toggleMenu()">
-        <i class="fa-solid fa-message"></i>
+        <i class="fa-sharp fa-solid fa-message"></i>
         Contacto
       </a>
     </li>
