--- a/src/app/home/components/sections/about-me/about-me.component.html
+++ b/src/app/home/components/sections/about-me/about-me.component.html
@@ -3,15 +3,18 @@
   <hr />
   <div class="about-me">
     <p>
-      Desarrollador Web Full-Stack especializado en tecnologías como Angular,
-      Java y Spring. También soy Ingeniero Informático (especialidad en
-      Computadores) por la E.T.S.I. de la Universidad de Huelva.
+      Desarrollador Web Full-Stack con más de 2 años de experiencia y amplios
+      conocimientos en tecnologías web, tales como Angular, Java o Spring.
+      Ingeniero Informático (especialidad en Computadores) por la E.T.S.I. de la
+      Universidad de Huelva.
     </p>
     <p>
-      Me encanta aprender cosas nuevas, sobre todo relacionadas con nuevas
-      tecnologías, y siempre con el objetivo de hacer el trabajo lo mejor
-      posible. En lo personal me considero una persona responsable, implicada y
-      muy constante.
+      Mi enfoque metodológico se basa en el uso de las mejores prácticas para
+      entregar soluciones que aporten el mayor valor posible con las máximas
+      garantías de escalabilidad, rendimiento y seguridad. Además, me considero
+      una persona responsable, implicada y muy constante e intento siempre
+      aportar mis ideas y mantener un aprendizaje continuo para crecer como
+      profesional día a día.
     </p>
   </div>
 </section>
