--- a/src/app/home/components/sections/about-me/about-me.component.scss
+++ b/src/app/home/components/sections/about-me/about-me.component.scss
@@ -1,14 +1,21 @@
+@import "../../../../assets/themes/themes.scss";
+
 section#about-me {
   scroll-margin-top: 5rem;
-  margin: 0rem 5rem;
+  padding: 1.5rem 5rem;
+  background: $grey-13;
 }
 
 .about-me {
   padding: 0rem 2rem;
+
+  p {
+    color: $white;
+  }
 }
 
 @media (max-width: 768px) {
   section#about-me {
-    margin: 0rem 2rem;
+    padding: 1.5rem 2rem;
   }
 }
