--- a/src/app/home/components/sections/contact/contact.component.scss
+++ b/src/app/home/components/sections/contact/contact.component.scss
@@ -1,6 +1,12 @@
+@import "../../../../assets/themes/themes.scss";
+
 section#contact {
   scroll-margin-top: 5rem;
-  padding: 0rem 5rem;
+  padding: 1.5rem 5rem;
+  background: $grey-03;
+  h3 {
+    color: $d-primary-dark-color;
+  }
 }
 
 .contact {
@@ -8,6 +14,6 @@ section#contact {
 }
 @media (max-width: 768px) {
   section#contact {
-    padding: 0rem 2rem;
+    padding: 1.5rem 2rem;
   }
 }
