--- a/src/app/home/components/sections/education/education.component.scss
+++ b/src/app/home/components/sections/education/education.component.scss
@@ -1,6 +1,9 @@
+@import "../../../../assets/themes/themes.scss";
+
 section#education {
   scroll-margin-top: 5rem;
-  padding: 0rem 5rem;
+  padding: 1.5rem 5rem;
+  background: $grey-14;
 }
 
 .education {
@@ -9,10 +12,13 @@ section#education {
 
 .description {
   padding-left: 2rem;
+  p {
+    color: $white;
+  }
 }
 
 @media (max-width: 768px) {
   section#education {
-    padding: 0rem 2rem;
+    padding: 1.5rem 2rem;
   }
 }
