--- a/src/app/home/components/sections/title/title.component.scss
+++ b/src/app/home/components/sections/title/title.component.scss
@@ -1,38 +1,34 @@
 @import "./../../../../assets/themes/themes.scss";
 
 section#home {
-  background-image: "./../../../../assets/images/floral.png";
 }
 
 .header-container {
-  padding: 0rem 5rem;
-  display: flex;
-  gap: 2rem;
-  img {
-    height: 25rem;
-    border-radius: 2rem;
-    margin-top: 1rem;
+  height: 100vh;
+  padding: 1rem 5rem;
+  p {
+    color: $white;
   }
 }
+
 .links {
   display: flex;
   gap: 1rem;
-}
-
-a {
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 3rem;
-  width: 3rem;
-  color: #fff;
-  background-color: $d-primary-color;
-  border-radius: 50%;
-  border: none;
-  transition: transform 0.2s ease-in-out;
-  &:hover {
-    transform: scale(1.05);
+  a {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 3rem;
+    width: 3rem;
+    color: $black;
+    background-color: $white;
+    border-radius: 50%;
+    border: none;
+    transition: transform 0.2s ease-in-out;
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 }
 
