--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,22 +1,25 @@
 <div [ngClass]="theme">
   <app-header></app-header>
   <main>
+    <div class="video-container">
+      <video autoplay muted loop poster="assets/images/background-picture.png">
+        <source src="assets/video/background.mp4" type="video/mp4" />
+        Tu navegador no soporta la etiqueta de video.
+      </video>
+    </div>
     <app-title></app-title>
+
     <app-about-me></app-about-me>
     @defer {
-      <app-experience></app-experience>
-    }
-    @defer {
-      <app-technologies></app-technologies>
-    }
-    @defer {
-      <app-education></app-education>
-    }
-    @defer {
-      <app-curriculum></app-curriculum>
-    }
-    @defer {
-      <app-contact></app-contact>
+    <app-experience></app-experience>
+    } @defer {
+    <app-technologies></app-technologies>
+    } @defer {
+    <app-education></app-education>
+    } @defer {
+    <app-curriculum></app-curriculum>
+    } @defer {
+    <app-contact></app-contact>
     }
   </main>
   <app-footer></app-footer>
