--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,9 @@
 @import "./../assets/themes/themes.scss";
 
 main {
-  background-color: $d-secondary-light-color;
+  //background-color: $d-secondary-light-color;
+  //background-color: white;
+  position: relative;
 }
 // //Tema Claro
 // div.light-theme {
@@ -16,3 +18,27 @@ main {
 //   background-color: $grey-13;
 //   transition: background-color 0.5s ease;
 // }
+
+/* Contenedor del video */
+.video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1; /* Para que el video esté detrás del contenido */
+  /* Estilos para el video */
+  video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    transform: translate(-50%, -50%);
+    object-fit: cover; /* Hace que el video cubra todo el espacio */
+    z-index: -1;
+  }
+}
