Pequeñas correcciones y optimizaciones

--- a/src/app/home/components/footer/footer.component.html
+++ b/src/app/home/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="footer-container">
-    <h2>Gracias por visitar mi web :)</h2>
+    <h3>Gracias por visitar mi web!</h3>
     <h4>No dudes en ponerte en contacto conmigo. ¡Hasta pronto!</h4>
     <div class="footer-info-container">
       <div class="section contact-section">
