--- a/src/app/home/components/sections/curriculum/curriculum.component.scss
+++ b/src/app/home/components/sections/curriculum/curriculum.component.scss
@@ -19,7 +19,7 @@ section#curriculum {
   padding: 10px 20px;
   font-size: 1rem;
   font-weight: bold;
-  color: #fff;
+  color: $grey-13;
   background-color: $d-primary-color;
   border-radius: 25px;
   border: none;
