--- a/src/app/home/components/sections/title/title.component.html
+++ b/src/app/home/components/sections/title/title.component.html
@@ -1,18 +1,20 @@
 <section id="home">
   <div class="header-container">
-    <span class="header-title">
+    <div class="header-title">
       <h1>José Manuel Rodríguez Camacho</h1>
       <h2>Full-Stack Web Developer</h2>
-
       <p>¡Bienvenido a mi página web!</p>
       <div class="links">
         <a href="https://www.linkedin.com/in/jose-manuel-r-c/" target="_blank">
-          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-linkedin-in" name="LinkedIn"></i>
         </a>
         <a href="https://github.com/josemanuelrc" target="_blank">
-          <i class="fa-brands fa-github"></i>
+          <i class="fa-brands fa-github" name="GitHub"></i>
         </a>
       </div>
-    </span>
+    </div>
+  </div>
+  <div class="arrow-container">
+    <div class="arrow-down"></div>
   </div>
 </section>
