--- a/src/app/home/components/sections/title/title.component.scss
+++ b/src/app/home/components/sections/title/title.component.scss
@@ -1,14 +1,18 @@
 @import "./../../../../assets/themes/themes.scss";
 
 section#home {
+  height: 100vh;
 }
 
 .header-container {
-  height: 100vh;
-  padding: 1rem 5rem;
+  padding: 0rem 5rem;
   p {
     color: $white;
   }
+}
+
+.header-title {
+  padding-top: 2rem;
 }
 
 .links {
@@ -35,5 +39,22 @@ section#home {
 @media (max-width: 768px) {
   .header-container {
     padding: 0rem 2rem;
+  }
+}
+.arrow-container {
+  display: flex;
+  justify-content: center;
+  .arrow-down {
+    width: 100px;
+    height: 100px;
+    background-color: $white;
+    clip-path: polygon(
+      50% 57%,
+      95% 38%,
+      80% 38%,
+      50% 50%,
+      20% 38%,
+      5% 38%
+    ); //clip-path: polygon(0 38%, 50% 50%, 100% 38%, 100% 45%, 50% 57%, 0 45%);
   }
 }
