--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -26,18 +26,13 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  z-index: -1; /* Para que el video esté detrás del contenido */
+  z-index: -1;
   /* Estilos para el video */
   video {
     position: absolute;
-    top: 50%;
-    left: 50%;
     min-width: 100%;
+    max-width: 100%;
     min-height: 100%;
-    width: auto;
-    height: auto;
-    transform: translate(-50%, -50%);
     object-fit: cover; /* Hace que el video cubra todo el espacio */
     z-index: -1;
   }
