--- a/src/app/home/components/sections/contact/contact.component.scss
+++ b/src/app/home/components/sections/contact/contact.component.scss
@@ -1,19 +1,29 @@
 @import "../../../../assets/themes/themes.scss";
+@import "../../../../assets/themes/breakpoints.scss";
 
 section#contact {
   scroll-margin-top: 5rem;
   padding: 1.5rem 5rem;
   background: $grey-03;
-  h3 {
-    color: $d-primary-dark-color;
+  .contact {
+    padding-inline: 2rem;
   }
 }
 
-.contact {
-  padding: 0rem 2rem;
+h3 {
+  color: $d-primary-dark-color;
 }
-@media (max-width: 768px) {
+
+@media (max-width: $tablet-breakpoint) {
   section#contact {
     padding: 1.5rem 2rem;
+  }
+}
+
+@media (max-width: $mobile-breakpoint) {
+  section#contact {
+    .contact {
+      padding-inline: 1rem;
+    }
   }
 }
