--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -30,10 +30,9 @@ main {
   /* Estilos para el video */
   video {
     position: absolute;
-    min-width: 100%;
-    max-width: 100%;
-    min-height: 100%;
-    object-fit: cover; /* Hace que el video cubra todo el espacio */
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
     z-index: -1;
   }
 }
