Content Max added for desktop and noscript

--- a/src/app/assets/themes/breakpoints.scss
+++ b/src/app/assets/themes/breakpoints.scss
@@ -2,4 +2,6 @@ $mobile-sm-breakpoint: 320px;
 $mobile-breakpoint: 576px;
 $tablet-breakpoint: 768px;
 $laptop-breakpoint: 1024px;
-$desktop-breakpoint: 1200px;
+$desktop-breakpoint: 1440px;
+
+$max-content-width: 1440px;
