--- a/src/app/home/components/sections/technologies/technologies.component.html
+++ b/src/app/home/components/sections/technologies/technologies.component.html
@@ -1,18 +1,20 @@
 <section id="technologies">
-  <h3>Tecnologías</h3>
-  <hr />
-  <div class="technologies">
-    <p>
-      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum eius
-      blanditiis dolorum reprehenderit asperiores pariatur, non libero
-      aspernatur omnis. Dolores quod cum delectus eligendi qui nobis commodi
-      nesciunt voluptas sit.
-    </p>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam ullam
-      consequuntur cupiditate id quibusdam. Impedit non recusandae natus
-      officiis delectus accusantium laborum dolorem! Sequi placeat blanditiis
-      tempora cupiditate, error possimus.
-    </p>
-  </div>
+  <article>
+    <h3>Tecnologías</h3>
+    <hr />
+    <div class="technologies">
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum eius
+        blanditiis dolorum reprehenderit asperiores pariatur, non libero
+        aspernatur omnis. Dolores quod cum delectus eligendi qui nobis commodi
+        nesciunt voluptas sit.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam ullam
+        consequuntur cupiditate id quibusdam. Impedit non recusandae natus
+        officiis delectus accusantium laborum dolorem! Sequi placeat blanditiis
+        tempora cupiditate, error possimus.
+      </p>
+    </div>
+  </article>
 </section>
