--- a/src/app/home/components/sections/technologies/technologies.component.scss
+++ b/src/app/home/components/sections/technologies/technologies.component.scss
@@ -16,6 +16,16 @@ h3 {
   color: $d-primary-dark-color;
 }
 
+@media (min-width: $desktop-breakpoint) {
+  section#technologies {
+    display: grid;
+    place-items: center;
+    article {
+      width: $max-content-width;
+    }
+  }
+}
+
 @media (max-width: $tablet-breakpoint) {
   section#technologies {
     padding: 1.5rem 2rem;
