--- a/src/app/home/components/sections/curriculum/curriculum.component.scss
+++ b/src/app/home/components/sections/curriculum/curriculum.component.scss
@@ -33,6 +33,16 @@ p {
   display: none;
 }
 
+@media (min-width: $desktop-breakpoint) {
+  section#curriculum {
+    display: grid;
+    place-items: center;
+    article {
+      width: $max-content-width;
+    }
+  }
+}
+
 @media (max-width: $tablet-breakpoint) {
   section#curriculum {
     padding: 1.5rem 2rem;
