--- a/src/app/home/components/sections/experience/experience.component.scss
+++ b/src/app/home/components/sections/experience/experience.component.scss
@@ -19,6 +19,16 @@ section#experience {
   }
 }
 
+@media (min-width: $desktop-breakpoint) {
+  section#experience {
+    display: grid;
+    place-items: center;
+    article {
+      width: $max-content-width;
+    }
+  }
+}
+
 @media (max-width: $tablet-breakpoint) {
   section#experience {
     padding: 1.5rem 2rem;
