--- a/src/app/home/components/footer/lang-selector/lang-selector.component.html
+++ b/src/app/home/components/footer/lang-selector/lang-selector.component.html
@@ -1,5 +1,5 @@
 <div class="selector">
-  <a class="selector-btn">{{ lang }}</a>
+  <div class="selector-btn">{{ lang }}</div>
   <div class="selector-content">
     <div class="selector-list">
       <a (click)="setLang('es')">Español</a>
