--- a/src/app/home/components/footer/footer.component.html
+++ b/src/app/home/components/footer/footer.component.html
@@ -3,49 +3,63 @@
     <h3>Gracias por visitar mi web!</h3>
     <h4>No dudes en ponerte en contacto conmigo. ¡Hasta pronto!</h4>
     <div class="footer-info-container">
-      <div class="section contact-section">
+      <div class="contact-section">
+        <!-- CONTACT -->
         <h3>Contacto</h3>
-        <div class="section-container">
-          <a href="tel:+34619832538">
-            <i class="fa-solid fa-phone"></i>
-            +34 619 83 25 38
-          </a>
-          <a href="mailto:josemanuel0709@hotmail.es">
-            <i class="fa-solid fa-envelope"></i>
-            josemanuel0709&#64;hotmail.es
-          </a>
-        </div>
+        <ul>
+          <!-- PHONE -->
+          <li>
+            <a href="tel:+34619832538">
+              <app-svg-icon [svgName]="'phone'" />
+              +34 619 83 25 38
+            </a>
+          </li>
+
+          <!-- MAIL -->
+          <li>
+            <a href="mailto:josemanuel0709@hotmail.es">
+              <app-svg-icon [svgName]="'mail'" />
+              josemanuel0709&#64;hotmail.es
+            </a>
+          </li>
+        </ul>
       </div>
-      <!-- <span class="separator"></span> -->
-      <div class="section links-section">
+      <div class="links-section">
         <h3>Enlaces de Interés</h3>
-        <div class="section-container">
+        <ul>
           <!-- LINKEDIN -->
-          <a href="https://www.linkedin.com/in/jose-manuel-r-c/">
-            <i class="fa-brands fa-linkedin"></i>
-            LinkedIn
-          </a>
+          <li>
+            <a href="https://www.linkedin.com/in/jose-manuel-r-c/">
+              <app-svg-icon [svgName]="'linkedin'" />
+              LinkedIn
+            </a>
+          </li>
+
           <!-- GITHUB -->
-          <a href="#"><i class="fa-brands fa-github"></i> GitHub</a>
-        </div>
+          <li>
+            <a href="#">
+              <app-svg-icon [svgName]="'github'" />
+              GitHub
+            </a>
+          </li>
+        </ul>
       </div>
-      <!-- <span class="separator"></span> -->
       <div class="section acessibility-section">
         <!-- ACCESIBILITY -->
         <h3>Accesibilidad</h3>
-        <div class="section-container">
+        <ul>
           <!-- LANGUAGE SELECTOR -->
-          <div class="space-between">
+          <li class="space-between">
             <h4>Idioma</h4>
             <app-lang-selector></app-lang-selector>
-          </div>
+          </li>
 
           <!-- THEME SLIDER -->
-          <div class="space-between">
+          <li class="space-between">
             <h4>Tema</h4>
             <app-theme-toggle-slider></app-theme-toggle-slider>
-          </div>
-        </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
