--- a/src/app/home/layout/header/nav/nav.component.html
+++ b/src/app/home/layout/header/nav/nav.component.html
@@ -5,65 +5,61 @@
   </div>
   <!-- NAVIGATION BAR LIST -->
   <ul class="nav-bar-list">
-    <li class="nav-bar-li">
+    <li>
       <a href="#">
         <i class="fa-sharp fa-solid fa-house"></i>
         <app-svg-icon [svgName]="'home'" />
         Inicio
       </a>
     </li>
-    <li class="nav-bar-li">
+    <li>
       <a href="#about-me">
         <app-svg-icon [svgName]="'info'" />
         Sobre mí
       </a>
     </li>
-    <li class="nav-bar-li">
+    <li>
       <a href="#experience">
         <app-svg-icon [svgName]="'briefcase'" />
         Experiencia
       </a>
     </li>
-    <li class="nav-bar-li">
+    <li>
       <a href="#technologies">
         <app-svg-icon [svgName]="'code'" />
         Tecnologías
       </a>
     </li>
-    <li class="nav-bar-li">
+    <li>
       <a href="#education">
         <app-svg-icon [svgName]="'book'" />
         Formación
       </a>
     </li>
-    <li class="nav-bar-li">
+    <li>
       <a href="#curriculum">
         <app-svg-icon [svgName]="'file'" />
         Currículum Vitae
       </a>
     </li>
-    <li class="nav-bar-li">
+    <li>
       <a href="#contact">
         <app-svg-icon [svgName]="'chat'" />
         Contacto
       </a>
     </li>
   </ul>
-
-  <!-- NAVIGATION BUTTONS -->
-  <div class="nav-bar-button">
-    <!-- MENU BUTTON -->
-    <button class="menu-btn" aria-label="Menu Button" (click)="toggleMenu()">
-      @if(isMenuOpen) {
-      <app-svg-icon [svgName]="'close'" />
-      } @else {
-      <app-svg-icon [svgName]="'menu'" />
-      }
-    </button>
-  </div>
+  <!-- MENU BUTTON -->
+  <button class="menu-btn" aria-label="Menu Button" (click)="toggleMenu()">
+    @if(isMenuOpen) {
+    <app-svg-icon [svgName]="'close'" />
+    } @else {
+    <app-svg-icon [svgName]="'menu'" />
+    }
+  </button>
 </nav>
 <!-- NAVIGATION DROPDOWN LIST -->
-<div #navDropList class="nav-drop-list" [class.menu-dropdown]="isMenuOpen">
+<nav #navDropList class="nav-drop-list" [class.menu-dropdown]="isMenuOpen">
   <ul>
     <li>
       <a href="#">
@@ -108,4 +104,4 @@
       </a>
     </li>
   </ul>
-</div>
+</nav>
