Avances y correcciones en la mquetación.

--- a/src/app/home/components/sections/about-me/about-me.component.html
+++ b/src/app/home/components/sections/about-me/about-me.component.html
@@ -4,10 +4,10 @@
     <hr />
     <div class="about-me">
       <p>
-        Desarrollador Web <mark>Full-Stack</mark> con más de 2 años de
-        experiencia y amplios conocimientos en tecnologías web, tales como
-        Angular, Java o Spring. Ingeniero Informático (especialidad en
-        Computadores) por la E.T.S.I. de la Universidad de Huelva.
+        Desarrollador Web Full-Stack con más de 2 años de experiencia y amplios
+        conocimientos en tecnologías web, tales como Angular, Java o Spring.
+        Ingeniero Informático (especialidad en Computadores) por la E.T.S.I. de
+        la Universidad de Huelva.
       </p>
       <p>
         Mi enfoque metodológico se basa en el uso de las mejores prácticas para
