--- a/src/app/home/components/sections/experience/experience.component.scss
+++ b/src/app/home/components/sections/experience/experience.component.scss
@@ -21,10 +21,11 @@ section#experience {
 
 @media (min-width: $desktop-breakpoint) {
   section#experience {
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
     article {
-      width: $max-content-width;
+      max-width: $max-content-width;
+      min-width: min(100%, $max-content-width);
     }
   }
 }
