--- a/src/app/home/components/sections/technologies/technologies.component.html
+++ b/src/app/home/components/sections/technologies/technologies.component.html
@@ -2,19 +2,17 @@
   <article>
     <h3>Tecnologías</h3>
     <hr />
-    <div class="technologies">
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum eius
-        blanditiis dolorum reprehenderit asperiores pariatur, non libero
-        aspernatur omnis. Dolores quod cum delectus eligendi qui nobis commodi
-        nesciunt voluptas sit.
-      </p>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam ullam
-        consequuntur cupiditate id quibusdam. Impedit non recusandae natus
-        officiis delectus accusantium laborum dolorem! Sequi placeat blanditiis
-        tempora cupiditate, error possimus.
-      </p>
+    <div class="grid">
+      <div class="item"><p>Angular</p></div>
+      <div class="item"><p>Java</p></div>
+      <div class="item"><p>Spring Boot</p></div>
+      <div class="item"><p>Hibernate</p></div>
+      <div class="item"><p>RxJS</p></div>
+      <div class="item"><p>TypeScript</p></div>
+      <div class="item"><p>Docker</p></div>
+      <div class="item"><p>AWS</p></div>
+      <div class="item"><p>MySQL</p></div>
+      <div class="item"><p>PostgreSQL</p></div>
     </div>
   </article>
 </section>
