--- a/src/app/home/components/sections/about-me/about-me.component.scss
+++ b/src/app/home/components/sections/about-me/about-me.component.scss
@@ -4,7 +4,7 @@
 section#about-me {
   scroll-margin-top: 5rem;
   padding: 1.5rem 5rem;
-  background: $grey-13;
+  background: $grey-14;
   .about-me {
     padding-inline: 2rem;
   }
@@ -16,10 +16,10 @@ p {
 
 @media (min-width: $desktop-breakpoint) {
   section#about-me {
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
     article {
-      width: $max-content-width;
+      max-width: $max-content-width;
     }
   }
 }
