--- a/src/app/home/components/sections/contact/contact.component.scss
+++ b/src/app/home/components/sections/contact/contact.component.scss
@@ -16,10 +16,10 @@ h3 {
 
 @media (min-width: $desktop-breakpoint) {
   section#contact {
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
     article {
-      width: $max-content-width;
+      max-width: $max-content-width;
     }
   }
 }
