--- a/src/app/home/layout/footer/footer.component.html
+++ b/src/app/home/layout/footer/footer.component.html
@@ -37,7 +37,7 @@
 
           <!-- GITHUB -->
           <li>
-            <a href="#">
+            <a href="https://github.com/josemanuelrc">
               <app-svg-icon [svgName]="'github'" />
               GitHub
             </a>
