--- a/src/app/home/layout/footer/footer.component.scss
+++ b/src/app/home/layout/footer/footer.component.scss
@@ -19,11 +19,12 @@ footer {
 }
 
 ul {
-  list-style-type: none;
-  padding-left: 0;
   li {
     a,
     h4 {
+      display: flex;
+      align-items: center;
+      gap: 0.25rem;
       padding: 0.5rem 0rem;
     }
   }
