--- a/src/app/home/components/sections/technologies/technologies.component.html
+++ b/src/app/home/components/sections/technologies/technologies.component.html
@@ -3,16 +3,15 @@
     <h3>Tecnologías</h3>
     <hr />
     <div class="grid">
-      <div class="item"><p>Angular</p></div>
-      <div class="item"><p>Java</p></div>
-      <div class="item"><p>Spring Boot</p></div>
-      <div class="item"><p>Hibernate</p></div>
-      <div class="item"><p>RxJS</p></div>
-      <div class="item"><p>TypeScript</p></div>
-      <div class="item"><p>Docker</p></div>
-      <div class="item"><p>AWS</p></div>
-      <div class="item"><p>MySQL</p></div>
-      <div class="item"><p>PostgreSQL</p></div>
+      @for(tech of technologies; track $index){
+      <div class="item">
+        <app-svg-icon
+          [svgName]="tech.svgName"
+          [svgColor]="tech.svgColor"
+        ></app-svg-icon>
+        <p>{{ tech.name }}</p>
+      </div>
+      }
     </div>
   </article>
 </section>
