--- a/src/app/home/components/sections/technologies/technologies.component.scss
+++ b/src/app/home/components/sections/technologies/technologies.component.scss
@@ -4,7 +4,7 @@
 section#technologies {
   scroll-margin-top: 5rem;
   padding: 1.5rem 5rem;
-  background: linear-gradient(to bottom, $grey-02, $grey-03);
+  background: $grey-13;
   min-height: 30rem;
 
   .technologies {
@@ -12,30 +12,29 @@ section#technologies {
   }
 }
 
-h3 {
-  color: $d-primary-dark-color;
-}
-
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 1.5rem;
   margin-top: 1rem;
+  padding-inline: 2rem;
 
   .item {
-    background-color: $black;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
     padding: 1rem;
-    text-align: center;
-    font-size: 1rem;
-    font-weight: bold;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: $grey-12;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
+
     p {
       color: $white;
     }
+
     &:hover {
+      cursor: pointer;
       transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     }
   }
 }
@@ -54,6 +53,10 @@ h3 {
 @media (max-width: $tablet-breakpoint) {
   section#technologies {
     padding: 1.5rem 2rem;
+  }
+
+  .grid {
+    padding-inline: 1rem;
   }
 }
 
